--- a/Project readme.Rmd
+++ b/Project readme.Rmd
@@ -41,7 +41,8 @@ code to batch download it.
 #source('Downloading shp files from US.R')
 ```
 
-For the actual join, we process the data and merge it. 
+For the actual join, we process the data and merge it. The issue is that there is
+discepancy in how census tracts are measured.
 
 
 
